# ds-for-everyone

./: .gitignore  .slugignore  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: main.py
src/apps/: configurations_app.py  data_upload_app.py  eda_app.py  ml_app.py  multipage.py  utils.py
src/apps/optimizer/: optimize_classification.py  optimize_regression.py
src/apps/preprocessing/: feature_drop.py  preprocess_pipeline.py
src/apps/utils/: utils.py
src/optimizer/: optimize_regression.py
tests/: test_data_upload_app.py  test_feature_drop.py  test_testcase.py
