[tool.poetry]
name = "ds-for-everyone"
version = "0.1.0"
description = ""
authors = ["baniasbaabe <banias@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.7"
optuna = "^2.10.0"
scikit-learn = "^1.0.2"
category-encoders = "^2.4.0"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
