[tool.poetry]
name = "ds-for-everyone"
version = "0.1.0"
description = ""
authors = ["baniasbaabe <banias@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.7"
optuna = "^2.10.0"
scikit-learn = "^1.0.2"
category-encoders = "^2.4.0"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
